RESOLVED FIXED113143
[EFL] Fix build break when media source is enabled
https://bugs.webkit.org/show_bug.cgi?id=113143
Summary [EFL] Fix build break when media source is enabled
Gyuyoung Kim
Reported 2013-03-23 19:22:34 PDT
There is build break when media source is enabled on EFL port. We need to fix this in order to start to implement media source functionality. However, I would like to land this after getting LGTM from media player folks.
Attachments
Patch (3.97 KB, patch)
2013-03-23 19:25 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2013-03-23 19:25:59 PDT
Gyuyoung Kim
Comment 2 2013-03-23 19:27:41 PDT
CC'ing Martin and Philippe.
Philippe Normand
Comment 3 2013-03-25 07:15:35 PDT
Comment on attachment 194728 [details] Patch See also bug 99065
WebKit Review Bot
Comment 4 2013-03-25 07:29:39 PDT
Comment on attachment 194728 [details] Patch Clearing flags on attachment: 194728 Committed r146770: <http://trac.webkit.org/changeset/146770>
WebKit Review Bot
Comment 5 2013-03-25 07:29:43 PDT
All reviewed patches have been landed. Closing bug.
Gyuyoung Kim
Comment 6 2013-03-25 07:32:49 PDT
(In reply to comment #3) > (From update of attachment 194728 [details]) > See also bug 99065 Ok, we will follow up the bug.
Note You need to log in before you can comment on or make changes to this bug.