[EFL] Fix build break when media source is enabled https://bugs.webkit.org/show_bug.cgi?id=113143

Unreviewed. Build error needs to be fixed in order to start to implement
media source functionality.


* CMakeLists.txt:
* platform/efl/MIMETypeRegistryEfl.cpp:
(WebCore):
(WebCore::MIMETypeRegistry::isSupportedMediaSourceMIMEType):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore):
(WebCore::MediaPlayerPrivateGStreamer::load):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:
(MediaPlayerPrivateGStreamer):


Canonical link: https://commits.webkit.org/131534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146770 268f45cc-cd09-0410-ab3c-d52691b4dbfc